// Copyright 2018-2021 Signal Messenger, LLC
// SPDX-License-Identifier: AGPL-3.0-only

package signalservice;

message DeviceName {
  optional bytes ephemeralPublic = 1;
  optional bytes syntheticIv     = 2;
  optional bytes ciphertext      = 3;
}
